--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,6 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.7.18",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
     "argon2": "^0.29.1",
@@ -21,12 +17,20 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "graphql": "^16.6.0",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.9"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.7.18",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.3"
   }
 }
