--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,5 @@
 DB_USERNAME=username
 DB_PASSWORD=password
 ACCESS_TOKEN_SECRET=youraccesstokensecret
+REFRESH_TOKEN_SECRET=refreshtokensecret
+REFRESH_TOKEN_COOKIE_NAME=jwt-auth-cookie-name
